--- a/index.html
+++ b/index.html
@@ -8,6 +8,95 @@
     </head>
     <body>
         <h1>Welcome to Movie Tickets Booking</h1>
-        
+        <article>
+            <form id="movies_select" name="movies select" method="GET">
+                <label>Select the Movie:</label>
+                <select id="movies">
+                    <option value="movies">--Movies--</option>
+                    <option value="Tenet">Tenet ($15.0)</option>
+                    <option value="American Sniper">American Sniper ($12.99)</option>
+                    <option value="The Irishman"> The Irishman ($17.0)</option>
+                </select>
+            </form>
+            <section>
+                <h4>Select the seats:</h4>
+                <table>
+                    <tr>
+                        <td><input type="checkbox" class="seats"></td>
+                        <td><input type="checkbox" class="seats"></td>
+                        <td><input type="checkbox" class="seats"></td>
+                        <td><input type="checkbox" class="seats"></td>
+                        <td><input type="checkbox" class="seats"></td>
+                        <td><input type="checkbox" class="seats"></td>
+                        <td><input type="checkbox" class="seats"></td>
+                        <td><input type="checkbox" class="seats"></td>
+                        <td><input type="checkbox" class="seats"></td>
+                        <td><input type="checkbox" class="seats"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                    </tr><tr>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                    </tr>
+                </table>
+                <input type="checkbox"><label>Available Seats</label>
+                <input type="checkbox"><label>Selected Seats</label>
+                <input type="checkbox"><label>Unavailable Seats</label>
+            </section>
+        </article>
     </body>
 </html>
