--- a/index.html
+++ b/index.html
@@ -18,85 +18,92 @@
                     <option value="The Irishman"> The Irishman ($17.0)</option>
                 </select>
             </form>
-            <section>
+            <section id="seattable" style="display: inline-block;">
                 <h4>Select the seats:</h4>
                 <table>
                     <tr>
-                        <td><input type="checkbox" class="seats"></td>
-                        <td><input type="checkbox" class="seats"></td>
-                        <td><input type="checkbox" class="seats"></td>
-                        <td><input type="checkbox" class="seats"></td>
-                        <td><input type="checkbox" class="seats"></td>
-                        <td><input type="checkbox" class="seats"></td>
-                        <td><input type="checkbox" class="seats"></td>
-                        <td><input type="checkbox" class="seats"></td>
-                        <td><input type="checkbox" class="seats"></td>
-                        <td><input type="checkbox" class="seats"></td>
+                        <td><input type="checkbox" class="seats" value="A0"></td>
+                        <td><input type="checkbox" class="seats" value="A1"></td>
+                        <td><input type="checkbox" class="seats" value="A2"></td>
+                        <td><input type="checkbox" class="seats" value="A3"></td>
+                        <td><input type="checkbox" class="seats" value="A4"></td>
+                        <td><input type="checkbox" class="seats" value="A5"></td>
+                        <td><input type="checkbox" class="seats" value="A6"></td>
+                        <td><input type="checkbox" class="seats" value="A7"></td>
+                        <td><input type="checkbox" class="seats" value="A8"></td>
+                        <td><input type="checkbox" class="seats" value="A9"></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox" class="seats" value="B0"></td>
+                        <td><input type="checkbox" class="seats" value="B1"></td>
+                        <td><input type="checkbox" class="seats" value="B2"></td>
+                        <td><input type="checkbox" class="seats" value="B3"></td>
+                        <td><input type="checkbox" class="seats" value="B4"></td>
+                        <td><input type="checkbox" class="seats" value="B5"></td>
+                        <td><input type="checkbox" class="seats" value="B6"></td>
+                        <td><input type="checkbox" class="seats" value="B7"></td>
+                        <td><input type="checkbox" class="seats" value="B8"></td>
+                        <td><input type="checkbox" class="seats" value="B9"></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox" class="seats" value="C0"></td>
+                        <td><input type="checkbox" class="seats" value="C1"></td>
+                        <td><input type="checkbox" class="seats" value="C2"></td>
+                        <td><input type="checkbox" class="seats" value="C3"></td>
+                        <td><input type="checkbox" class="seats" value="C4"></td>
+                        <td><input type="checkbox" class="seats" value="C5"></td>
+                        <td><input type="checkbox" class="seats" value="C6"></td>
+                        <td><input type="checkbox" class="seats" value="C7"></td>
+                        <td><input type="checkbox" class="seats" value="C8"></td>
+                        <td><input type="checkbox" class="seats" value="C9"></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                    </tr><tr>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox" class="seats" value="D0"></td>
+                        <td><input type="checkbox" class="seats" value="D1"></td>
+                        <td><input type="checkbox" class="seats" value="D2"></td>
+                        <td><input type="checkbox" class="seats" value="D3"></td>
+                        <td><input type="checkbox" class="seats" value="D4"></td>
+                        <td><input type="checkbox" class="seats" value="D5"></td>
+                        <td><input type="checkbox" class="seats" value="D6"></td>
+                        <td><input type="checkbox" class="seats" value="D7"></td>
+                        <td><input type="checkbox" class="seats" value="D8"></td>
+                        <td><input type="checkbox" class="seats" value="D9"></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
-                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox" class="seats" value="E0"></td>
+                        <td><input type="checkbox" class="seats" value="E1"></td>
+                        <td><input type="checkbox" class="seats" value="E2"></td>
+                        <td><input type="checkbox" class="seats" value="E3"></td>
+                        <td><input type="checkbox" class="seats" value="E4"></td>
+                        <td><input type="checkbox" class="seats" value="E5"></td>
+                        <td><input type="checkbox" class="seats" value="E6"></td>
+                        <td><input type="checkbox" class="seats" value="E7"></td>
+                        <td><input type="checkbox" class="seats" value="E8"></td>
+                        <td><input type="checkbox" class="seats" value="E9"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" class="seats" value="F0"></td>
+                        <td><input type="checkbox" class="seats" value="F1"></td>
+                        <td><input type="checkbox" class="seats" value="F2"></td>
+                        <td><input type="checkbox" class="seats" value="F3"></td>
+                        <td><input type="checkbox" class="seats" value="F4"></td>
+                        <td><input type="checkbox" class="seats" value="F5"></td>
+                        <td><input type="checkbox" class="seats" value="F6"></td>
+                        <td><input type="checkbox" class="seats" value="F7"></td>
+                        <td><input type="checkbox" class="seats" value="F8"></td>
+                        <td><input type="checkbox" class="seats" value="F9"></td>
                     </tr>
                 </table>
-                <input type="checkbox"><label>Available Seats</label>
-                <input type="checkbox"><label>Selected Seats</label>
-                <input type="checkbox"><label>Unavailable Seats</label>
             </section>
+            <div></div>
+                <div class="smallBox greenBox">Selected Seat</div> <br/>
+                <div class="smallBox redBox">Reserved Seat</div><br/>
+                <div class="smallBox emptyBox">Empty Seat</div><br/>
+            </div>
         </article>
+        <p>Movie Name:</p><p></p>
+        <p>Total price:</p><p></p>
+        <p>Number of seats:</p><p></p>
+        <button>Pay</button>
     </body>
 </html>
