--- a/index.html
+++ b/index.html
@@ -95,15 +95,16 @@
                     </tr>
                 </table>
             </section>
-            <div></div>
+            <div>
                 <div class="smallBox greenBox">Selected Seat</div> <br/>
                 <div class="smallBox redBox">Reserved Seat</div><br/>
                 <div class="smallBox emptyBox">Empty Seat</div><br/>
             </div>
+            <p>Movie Name:</p><p></p>
+            <p>Total price:</p><p></p>
+            <p>Number of seats:</p><p></p>
+            <button type="submit" id="pay">Pay</button>
         </article>
-        <p>Movie Name:</p><p></p>
-        <p>Total price:</p><p></p>
-        <p>Number of seats:</p><p></p>
-        <button>Pay</button>
+        
     </body>
 </html>
