--- a/index.html
+++ b/index.html
@@ -94,15 +94,17 @@
                         <td><input type="checkbox" class="seats" value="F9"></td>
                     </tr>
                 </table>
+                <button id="confirmselection">Confirm Selection</button>
             </section>
             <div>
                 <div class="smallBox greenBox">Selected Seat</div> <br/>
                 <div class="smallBox redBox">Reserved Seat</div><br/>
                 <div class="smallBox emptyBox">Empty Seat</div><br/>
             </div>
-            <p>Movie Name:</p><p></p>
-            <p>Total price:</p><p></p>
-            <p>Number of seats:</p><p></p>
+            <p id="moviename">Movie Name:</p><span></span>
+            <p>Total price:</p><span></span>
+            <p>Number of seats:</p><span></span>
+            
             <button type="submit" id="pay">Pay</button>
         </article>
         
