--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Welcome to Movie Tickets Booking</h1>
         <article>
-            <form id="movies_select" name="movies select" method="GET">
+            <form id="movies_select" name="movies select" method="GET" action="payment.html">
                 <label>Select the Movie:</label>
                 <select id="movies">
                     <option value="movies">--Movies--</option>
