--- a/payment.html
+++ b/payment.html
@@ -41,18 +41,21 @@
             var validate = function(){
                 var name = $("fname");
                 var emailId = $("mail");
-                var phnNum = $("")
+                var phnNum = $("pnum");
+                if(name.nodeValue == ""){
+
+                }
             }
         </script>
     </head>
     <body>
         <h1>Complete the payment</h1>
         <form>
-            <label>Name:</label><input type="text" id="fname"></br>
-            <label>E-mail:</label><input type="email" id="mail"><br>
-            <label>Phone Number:</label><input type="tel" id="pnum"><br>
+            <label>Name:</label><input type="text" id="fname"><span>*</span></br>
+            <label>E-mail:</label><input type="email" id="mail"><span>*</span><br>
+            <label>Phone Number:</label><input type="tel" id="pnum"><span>*</span><br>
             <label>Credit Card Details:</label><br>
-            <label>Credit Card Number</label><input type="number" id="ccnum"><br>
+            <label>Credit Card Number</label><input type="number" id="ccnum"><span>*</span><br>
             <label>Expiry Date:</label>
                 <select id="month">
                     <option value="month">--Select Month--</option>
@@ -79,7 +82,8 @@
                         <option value="2026">2026</option>
                         <option value="2027">2027</option>
                 </select><br>
-            <label>CVV:</label><input type="number" id="cvv"><br>
+            <label>Name on card:</label><input type="text" id="noc"><span>(optional)</span><br>
+            <label>CVV:</label><input type="number" id="cvv"><span>*</span><br>
             <button type="submit" id="submit">Confirm Payment</button>
         </form>
     </body>
