--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <p>Total price:</p><span></span>
             <p>Number of seats:</p><span></span>
             
-            <button type="submit" id="pay">Pay</button>
+            <a href="payment.html"><button type="submit" id="pay">Pay</button></a>
         </article>
         
     </body>
